# Analise_letras_de_musica

./: .gitignore  README.md  basic_stats.py  cleaner.py  debug.py  nuvem.py  pyproject.toml  raspagem.py  visual.py
