[tool.poetry]
name = "analise-letras-de-musica"
version = "0.1.0"
description = ""
authors = ["guilherme <guilherme-lopes58@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
parsel = "^1.10.0"
dateparser = "^1.2.0"
polars = "^1.21.0"
httpx = "^0.28.1"
spacy = "^3.8.4"
pip = "^25.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
